# hector_camera_control

./: README.md
hector_camera_controller/: CMakeLists.txt  package.xml
hector_camera_controller/launch/: camera_control.launch
hector_camera_controller/params/: patterns.yaml
hector_camera_controller/src/: CMakeLists.txt  camera_control.cpp
hector_camera_joint_controller/: CMakeLists.txt  package.xml
hector_camera_joint_controller/config/: argo_tracker_sensor_head_patterns.yaml  asterix_sensor_head_patterns.yaml  hector_tracker_sensor_head_patterns.yaml  jasmine_merkel_sensor_head_patterns.yaml
hector_camera_joint_controller/include/hector_camera_joint_controller/: cam_joint_trajectory_controller.h
hector_camera_joint_controller/launch/: argo_tracker_sensor_head.launch  hector_pan_tilt_sensor_head.launch  hector_pan_tilt_sensor_head_asterix.launch  hector_pan_tilt_sensor_head_jasmine2018.launch  hector_pan_tilt_sensor_head_no_planning.launch  hector_roll_tilt_lidar_mount.launch
hector_camera_joint_controller/src/: cam_joint_trajectory_controller.cpp
