<?xml version="1.0"?>
<package format="2">
  <name>hector_camera_joint_controller</name>
  <version>0.0.0</version>
  <description>The hector_camera_joint_controller package</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>cmake_modules</depend>
  <depend>actionlib</depend>
  <depend>moveit_msgs</depend>
  <depend>hector_perception_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>

  <export>
  </export>
</package>
